# terrasight

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INITIAL_PROMPTS.md  package.json  pnpm-lock.yaml  progress.md  pyproject.toml  render.yaml  wrangler.jsonc
apps/web/: .env.example  astro.config.mjs  package.json  tsconfig.json
apps/worker/: package.json  wrangler.jsonc
backend/: config.py  main.py  requirements.txt
backend/api/: coast.py  drinking_water.py  earth_now.py  earth_now_integrated.py  globe_surface.py  layers.py  rankings.py  releases.py  reports.py  sites.py  trends.py
backend/connectors/: airnow.py  base.py  brownfields.py  climate_normals.py  climate_trace.py  cmems.py  coral_reef_watch.py  earthquake.py  echo.py  firms.py  ghgrp.py  gibs.py  global_forest_watch.py  noaa_ctag.py  noaa_gml.py  noaa_gml_ch4.py  noaa_sea_level.py  nsidc.py  nws_alerts.py  oisst.py  open_meteo_aq.py  open_meteo_marine.py  open_meteo_weather.py  openaq.py  openfema.py  pfas.py  sdwis.py  superfund.py  tri.py  usgs.py  wqp.py
backend/models/: cbsa.py
backend/scheduler/: jobs.py
backend/utils/: surface_cache.py  surface_renderer.py
data/: cbsa_mapping.json
docs/: NEXT_STEPS.md  api-spike-results.md  connectors.md  data-architecture.md  deploy.md  globe-options.md  globe-vision.md  guardrails.md  live-data-snapshot.md  project-blueprint.md  report-spec.md  terrasight-v2-step-prompts.md  terrasight_v2_architecture_and_prompts.md  ui-design.md  viz-iterations.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+195 files in other folders)
