[project]
name = "terrasight-pipelines"
version = "0.2.0"
description = "TerraSight v2 data pipelines — connectors, jobs, transforms, publish."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "xarray>=2024.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "cfgrib>=0.9.10 ; platform_system != 'Windows'",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["pipelines/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*"]
